<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardFeud</string>
    <string name="title_section1">Rules</string>
    <string name="title_section2">CardFeud</string>
    <string name="title_section3">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="action_chat">Chat</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_globe">Country Code</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_stats">Stats</string>
    <string name="action_search">Search</string>
    <string name="action_start">Start</string>
    <string name="action_game">Game</string>
    <string name="action_rules">Rules</string>
    <string name="action_newgame">New Game</string>
    <string name="action_signup">SignUp</string>
    <string name="action_login">Login</string>
    <color name="ColorWhite">#FFF</color>
    <color name="ColorBlack">#000</color>
    <color name="ColorRed">#F00</color>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_mystat">My Stats</string>
    <string name="title_activity_worldlist">World List</string>
    <string name="title_activity_countrylist">Country List</string>

    <string name="sign_up_text">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_repeat_hint">Password Repeat</string>
    <string name="country_code_hint">Country code: Press globe for help</string>
    <string name="go_to_login_text">Already on Cardfeud?</string>
    <string name="go_to_login_button_text">Go to Log in</string>

    <string name="sign_in_text">Sign in</string>
    <string name="go_to_sign_up_text">New to Cardfeud?</string>
    <string name="go_to_sign_up_button_text">Go to Sign Up</string>
    <string name="rules">Will the next card be High or Low?\n\nAce low and King high\n\nIf you\'re right you win one point and gets to keep playing\n\nIf you\'re wrong you loose one point and the turn to your opponent\n\nYou can pass to your opponent if you don\'t want to guess\n\nYou can either meet your friends on Iphone or Android or meet a random opponent</string>


</resources>
