<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:se.xjobb.scardfeud="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_refresh"
        se.xjobb.scardfeud:showAsAction="always"/>

    <item android:id="@+id/action_chat"
        android:title="@string/action_chat"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_chat"
        se.xjobb.scardfeud:showAsAction="always"/>

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_help"
        se.xjobb.scardfeud:showAsAction="always"/>
</menu>
