<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:se.xjobb.scardfeud="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_refresh"
        se.xjobb.scardfeud:showAsAction="always" />

    <item android:id="@+id/action_stats"
        android:title="@string/action_stats"
        android:orderInCategory="100"
        android:icon="@drawable/ic_stats"
        se.xjobb.scardfeud:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_settings"
        se.xjobb.scardfeud:showAsAction="always" />
</menu>
