<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="se.xjobb.scardfeud.AppSettings" >
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#005500"/>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:textColor="@color/ColorWhite"
        android:layout_marginTop="10dp"
        android:textSize="40dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/usernameLoginError"
            android:textColor="@color/ColorRed"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:paddingLeft="10dp"
            android:inputType="textPersonName"
            android:hint="@string/username_hint"
            android:singleLine="true"
            android:maxLength="30"
            android:background="@drawable/shape"
            android:ems="10"
            android:id="@+id/usernameLoginInput"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/passwordLoginError"
            android:textColor="@color/ColorRed"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:singleLine="true"
            android:maxLength="30"
            android:background="@drawable/shape"
            android:ems="10"
            android:id="@+id/passwordLoginInput"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:id="@+id/signInButton"
            android:background="@drawable/button"
            android:text="@string/sign_in_text"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:textColor="@color/ColorWhite"
            android:text="@string/go_to_sign_up_text"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:id="@+id/goToSignUpButton"
            android:background="@drawable/button"
            android:textStyle="bold"
            android:text="@string/go_to_sign_up_button_text"/>

    </LinearLayout>

</LinearLayout>